local/logs/project.log
2018-01-31T17:17:47.454Z - normal: Load ~/.CocosCreator/settings.json
2018-01-31T17:17:47.469Z - normal: checking language setting...
2018-01-31T17:17:47.469Z - normal: Language: en
2018-01-31T17:17:51.316Z - success: protocol editor-framework registered
2018-01-31T17:17:51.316Z - success: protocol app registered
2018-01-31T17:17:51.316Z - success: protocol theme registered
2018-01-31T17:17:51.317Z - success: protocol packages registered
2018-01-31T17:17:51.317Z - success: protocol unpack registerred
2018-01-31T17:17:51.317Z - success: protocol disable-commonjs registerred
2018-01-31T17:17:53.641Z - normal: connected!
2018-01-31T17:17:53.643Z - normal: Check project C:\Users\ser\Documents\CocosCreator\SOS
2018-01-31T17:17:53.645Z - normal: Initializing Cocos2d
2018-01-31T17:17:54.290Z - normal: Initializing Asset Database
2018-01-31T17:17:54.372Z - success: protocol uuid registerred
2018-01-31T17:17:54.373Z - success: protocol db registerred
2018-01-31T17:17:54.374Z - success: protocol thumbnail registerred
2018-01-31T17:17:54.375Z - normal: Loading editor/builtin packages
2018-01-31T17:17:54.423Z - success: anysdk loaded
2018-01-31T17:17:54.746Z - success: assets loaded
2018-01-31T17:17:54.752Z - success: builder loaded
2018-01-31T17:17:54.761Z - success: cocos-analytics loaded
2018-01-31T17:17:54.768Z - success: console loaded
2018-01-31T17:17:54.777Z - success: hierarchy loaded
2018-01-31T17:17:54.785Z - success: inspector loaded
2018-01-31T17:17:54.788Z - success: keystore loaded
2018-01-31T17:17:54.793Z - success: node-library loaded
2018-01-31T17:17:54.805Z - success: package-asset loaded
2018-01-31T17:17:54.814Z - success: preferences loaded
2018-01-31T17:17:54.818Z - success: project-exporter loaded
2018-01-31T17:17:54.854Z - success: project-importer loaded
2018-01-31T17:17:54.859Z - success: project-settings loaded
2018-01-31T17:17:54.864Z - success: ui-kit loaded
2018-01-31T17:17:54.868Z - success: ui-grid loaded
2018-01-31T17:17:54.874Z - success: scene loaded
2018-01-31T17:17:54.877Z - success: sprite-editor loaded
2018-01-31T17:17:54.894Z - success: store loaded
2018-01-31T17:17:54.903Z - success: timeline loaded
2018-01-31T17:17:54.904Z - normal: Loading builtin packages
2018-01-31T17:17:54.909Z - success: asset-db-debugger loaded
2018-01-31T17:17:54.913Z - success: code-editor loaded
2018-01-31T17:17:54.915Z - success: color-picker loaded
2018-01-31T17:17:54.920Z - success: package-manager loaded
2018-01-31T17:17:54.929Z - success: sdkbox loaded
2018-01-31T17:17:54.938Z - success: tester loaded
2018-01-31T17:17:54.942Z - success: ui-kit-preview-extra loaded
2018-01-31T17:17:54.946Z - success: ui-kit-preview loaded
2018-01-31T17:17:54.949Z - success: ui-tree loaded
2018-01-31T17:17:58.681Z - normal: Initializing project C:\Users\ser\Documents\CocosCreator\SOS
2018-01-31T17:17:58.692Z - normal: Loading packages
2018-01-31T17:17:58.701Z - normal: Watching packages
2018-01-31T17:17:58.734Z - normal: Run Application
2018-01-31T17:18:00.469Z - success: preview server running at http://localhost:7458
2018-01-31T17:18:13.200Z - normal: 1.8.1
2018-01-31T18:08:03.911Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\ser\Documents\CocosCreator\SOS\assets\jugador.js, message: Compile error: SyntaxError: C:/Users/ser/Documents/CocosCreator/SOS/assets/jugador.js: Unexpected token, expected , (223:72)
  221 | 			}
  222 | 			
> 223 | 			cc.log(this.distanciaAngular(this.node.rotationX, this.anguloDestino);
      | 			                                                                     ^
  224 | 			
  225 | 			this.node.rotation = this.node.rotationX + this.velocidadAngularDestino * dt;
  226 | 			
    at Parser.pp$5.raise (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp.expect (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:1749:33)
    at Parser.pp$3.parseCallExpressionArguments (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3564:12)
    at Parser.pp$3.parseSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3533:31)
    at Parser.pp$3.parseExprSubscripts (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (C:\CocosCreator\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
